--- a/sles4sap/azure_cli.html
+++ b/sles4sap/azure_cli.html
@@ -18,7 +18,8 @@
       <li><a href="#az_group_create">az_group_create</a></li>
       <li><a href="#az_group_name_get">az_group_name_get</a></li>
       <li><a href="#az_group_delete">az_group_delete</a></li>
-      <li><a href="#az_network_vnet_create">az_network_vnet_create</a>
+      <li><a href="#az_network_vnet_create">az_network_vnet_create</a></li>
+      <li><a href="#az_network_vnet_subnet_update">az_network_vnet_subnet_update</a>
         <ul>
           <li><a href="#az_network_vnet_get">az_network_vnet_get</a></li>
         </ul>
@@ -27,6 +28,7 @@
       <li><a href="#az_network_nsg_rule_create">az_network_nsg_rule_create</a></li>
       <li><a href="#az_network_publicip_create">az_network_publicip_create</a></li>
       <li><a href="#az_network_publicip_get">az_network_publicip_get</a></li>
+      <li><a href="#az_network_nat_gateway_create">az_network_nat_gateway_create</a></li>
       <li><a href="#az_network_lb_create">az_network_lb_create</a></li>
       <li><a href="#az_network_lb_probe_create">az_network_lb_probe_create</a></li>
       <li><a href="#az_network_lb_rule_create">az_network_lb_rule_create</a></li>
@@ -49,6 +51,8 @@
       <li><a href="#az_network_peering_create">az_network_peering_create</a></li>
       <li><a href="#az_network_peering_list">az_network_peering_list</a></li>
       <li><a href="#az_network_peering_delete">az_network_peering_delete</a></li>
+      <li><a href="#az_disk_create">az_disk_create</a></li>
+      <li><a href="#az_resource_delete">az_resource_delete</a></li>
     </ul>
   </li>
 </ul><h1>lib/sles4sap/azure_cli.pm</h1>
@@ -65,7 +69,9 @@
 
 <h2 id="az_group_create">az_group_create</h2>
 
-<pre><code>az_group_create( name =&gt; &#39;openqa-rg&#39;, region =&gt; &#39;westeurope&#39;);</code></pre>
+<pre><code>az_group_create(
+    name =&gt; &#39;openqa-rg&#39;,
+    region =&gt; &#39;westeurope&#39;);</code></pre>
 
 <p>Create an Azure resource group in a specific region</p>
 
@@ -75,7 +81,7 @@
 <dd>
 
 </dd>
-<dt id="region---Azure-region"><b>region</b> - Azure region</dt>
+<dt id="region---Azure-region-where-to-create-the-resource-group"><b>region</b> - Azure region where to create the resource group</dt>
 <dd>
 
 </dd>
@@ -123,7 +129,7 @@
 <dd>
 
 </dd>
-<dt id="region---Azure-region1"><b>region</b> - Azure region</dt>
+<dt id="region---Azure-region-where-to-create-the-VNET"><b>region</b> - Azure region where to create the VNET</dt>
 <dd>
 
 </dd>
@@ -140,6 +146,36 @@
 
 </dd>
 <dt id="subnet_prefixes---subnet-ip-address-space.-Default-192.168.0.0-24"><b>subnet_prefixes</b> - subnet ip address space. Default 192.168.0.0/24</dt>
+<dd>
+
+</dd>
+</dl>
+
+<h2 id="az_network_vnet_subnet_update">az_network_vnet_subnet_update</h2>
+
+<pre><code>az_network_vnet_subnet_update(
+    resource_group =&gt; &#39;openqa-rg&#39;,
+    vnet =&gt; &#39;openqa-vnet&#39;,
+    snet =&gt; &#39;openqa-subnet&#39;,
+    nat_gateway =&gt; &#39;openqa-nat&#39;)</code></pre>
+
+<p>Update a Subnet</p>
+
+<dl>
+
+<dt id="resource_group---existing-resource-group-where-to-create-the-network1"><b>resource_group</b> - existing resource group where to create the network</dt>
+<dd>
+
+</dd>
+<dt id="vnet---name-of-the-virtual-network1"><b>vnet</b> - name of the virtual network</dt>
+<dd>
+
+</dd>
+<dt id="snet---name-of-the-subnet1"><b>snet</b> - name of the subnet</dt>
+<dd>
+
+</dd>
+<dt id="nat_gateway---optional-argument-if-provided-the-update-is-about-associating-a-Subnet-th-a-NAT-gateway"><b>nat_gateway</b> - optional argument, if provided the update is about associating a Subnet th a NAT gateway</dt>
 <dd>
 
 </dd>
@@ -261,6 +297,36 @@
 
 </dd>
 <dt id="name---existing-public-IP-resource-name"><b>name</b> - existing public IP resource name</dt>
+<dd>
+
+</dd>
+</dl>
+
+<h2 id="az_network_nat_gateway_create">az_network_nat_gateway_create</h2>
+
+<pre><code>az_network_nat_gateway_create(
+    resource_group =&gt; &#39;openqa-rg&#39;,
+    region =&gt; &#39;westeurope&#39;,
+    name =&gt; &#39;openqa-nat-gateway&#39;,
+    public_ip =&gt; &#39;openqa-pubip&#39;)</code></pre>
+
+<p>Create a NAT Gateway</p>
+
+<dl>
+
+<dt id="resource_group---existing-resource-group-where-to-create-the-NAT-Gateway"><b>resource_group</b> - existing resource group where to create the NAT Gateway</dt>
+<dd>
+
+</dd>
+<dt id="region---Azure-region-where-to-create-the-NAT-Gateway"><b>region</b> - Azure region where to create the NAT Gateway</dt>
+<dd>
+
+</dd>
+<dt id="name---NAT-Gateway-resource-name"><b>name</b> - NAT Gateway resource name</dt>
+<dd>
+
+</dd>
+<dt id="public_ip---add-to-the-NAT-Gateway-a-public-IP"><b>public_ip</b> - add to the NAT Gateway a public IP</dt>
 <dd>
 
 </dd>
@@ -407,8 +473,8 @@
 
 <pre><code>az_vm_as_create(
     resource_group =&gt; &#39;openqa-rg&#39;,
-    name =&gt; &#39;openqa-as&#39;,
     region =&gt; &#39;westeurope&#39;,
+    name =&gt; &#39;openqa-as&#39;,
     fault_count =&gt; 2)</code></pre>
 
 <p>Create an availability set. Later on VM can be assigned to it.</p>
@@ -437,19 +503,23 @@
 
 <pre><code>az_vm_create(
     resource_group =&gt; &#39;openqa-rg&#39;,
-    name =&gt; &#39;openqa-vm&#39;,
     region =&gt; &#39;westeurope&#39;,
+    name =&gt; &#39;openqa-vm&#39;,
     image =&gt; &#39;SUSE:sles-sap-15-sp5:gen2:latest&#39;)</code></pre>
 
 <p>Create a virtual machine</p>
 
 <dl>
 
-<dt id="name---virtual-machine-name"><b>name</b> - virtual machine name</dt>
+<dt id="resource_group---existing-resource-group-where-to-create-the-VM"><b>resource_group</b> - existing resource group where to create the VM</dt>
 <dd>
 
 </dd>
-<dt id="resource_group---existing-resource-group-where-to-create-the-VM"><b>resource_group</b> - existing resource group where to create the VM</dt>
+<dt id="region---optional-region-where-to-create-the-VM"><b>region</b> - optional region where to create the VM</dt>
+<dd>
+
+</dd>
+<dt id="name---virtual-machine-name"><b>name</b> - virtual machine name</dt>
 <dd>
 
 </dd>
@@ -466,10 +536,6 @@
 
 </dd>
 <dt id="size---VM-size-default-Standard_B1s"><b>size</b> - VM size, default Standard_B1s</dt>
-<dd>
-
-</dd>
-<dt id="region---optional-region-where-to-create-the-VM"><b>region</b> - optional region where to create the VM</dt>
 <dd>
 
 </dd>
@@ -750,6 +816,10 @@
 <dd>
 
 </dd>
+<dt id="timeout---timeout-default-601"><b>timeout</b> - timeout, default 60</dt>
+<dd>
+
+</dd>
 </dl>
 
 <h2 id="az_vm_diagnostic_log_enable">az_vm_diagnostic_log_enable</h2>
@@ -796,7 +866,7 @@
 
 <pre><code>az_storage_account_create(
     resource_group =&gt; &#39;openqa-rg&#39;,
-    region =&gt; &#39;northeurope&#39;
+    region =&gt; &#39;westeurope&#39;
     name =&gt; &#39;openqasa&#39;)</code></pre>
 
 <p>Create a storage account</p>
@@ -807,7 +877,7 @@
 <dd>
 
 </dd>
-<dt id="region---Azure-region2"><b>region</b> - Azure region</dt>
+<dt id="region---Azure-region-where-to-create-the-storage"><b>region</b> - Azure region where to create the storage</dt>
 <dd>
 
 </dd>
@@ -900,6 +970,37 @@
 
 </dd>
 </dl>
+
+<h2 id="az_disk_create">az_disk_create</h2>
+
+<pre><code>az_disk_create(resource_group=&gt;$resource_group, name=&gt;$name
+    [, size_gb=&gt;60, source=$source, tags=&quot;tag1=value1 tag2=value2&quot;]);</code></pre>
+
+<p>Creates new disk device either by specifying <b>size_gb</b> or by cloning another disk device using argument <b>source</b>. Arguments <b>size_gb</b> and <b>source</b> are mutually exclusive.</p>
+
+<p><b>name</b> New disk name</p>
+
+<p><b>resource_group</b> Existing resource group name.</p>
+
+<p><b>source</b> Create disk by cloning snapshot</p>
+
+<p><b>size_gb</b> New disk size</p>
+
+<p><b>tags</b> Additional tags to add to the disk resource. key=value pairs must be separated by empty space. Example: az_disk_create(tags=&gt;&quot;some_tag=some_value another_tag=another_value&quot;)</p>
+
+<h2 id="az_resource_delete">az_resource_delete</h2>
+
+<pre><code>az_resource_delete(resource_group=&gt;$resource_group, name=&gt;$name);</code></pre>
+
+<p>Deletes resource from specified resource group. Single resource can be deleted by specifying <b>name</b> or list of resource IDs delimited by empty space using argument <b>ids</b>. Arguments <b>name</b> and <b>ids</b> are mutually exclusive.</p>
+
+<p><b>resource_group</b> Existing resource group name.</p>
+
+<p><b>name</b> Name of the resource to delete</p>
+
+<p><b>ids</b> list of resource IDs to delete</p>
+
+<p><b>timeout</b> Timeout for az command. Default: 60</p>
 
 
 </body>
